Trac 0.6 (March __, 2004)
http://svn.edgewall.com/repos/trac/trunk/

 * View diffs between wiki page edits.
 * Support for tables in the wiki. (Thanks to Stephen Hansen)
 * Colored reports. Use colors to show priority, etc. 
 * Report groups. Group results by a column.
 * Multi-line report rows.
 * Download report in CSV (Comma Separated Value) and tab-separated format
 * RSS 2.0 content syndication support in Timeline, Reports and Log/Browser
 * Better, locale-based date and time formatting. 
 * Overall cosmetic improvements.
 * Fixed bugs: #16, #103, #110, #112, #113, #114, #117,#120
	
Trac 0.5.2 (March 2, 2004)
http://svn.edgewall.com/repos/trac/tags/trac-0.5.2

 * Performance improvements.
 * Better unicode support in commit-messages.
 * TRAC_ADMIN is now a real "meta-permission" containing all other permissions.
 * Wiki-links of the svn:/path format can now also link to directories.
 * Handle subversion changesets without any "author" specified.
 * "view" checkboxes in the timeline view now reflect the current state.
 * The subversion repository is now indexed by "svnadmin initdb" instead of
   trac.cgi at first execution.
 * trac-admin now has a 'wiki dump' and 'wiki load' commands to
    export/import all pages to/from a directory.
 * Most of the inline css is removed.
 * IE6 navbar problem fixed.
 * Fixed bugs: #69, #73, #77, #78, #79, #80, #84, #85, #86, #89, #90, 
               #91, #93, #97, 
	
Trac 0.5.1 (February 25, 2004)
http://svn.edgewall.com/repos/trac/tags/trac-0.5.1
	
 * Navbar now works properly on error pages.
 * Cleaned up source code. Removed ugly tabs.
 * Added missing COPYING, AUTHORS etc. Cleaned up package.
 * trac-admin now works with python 2.1.
 * Fixed bugs: #74, #75, #76, #77.
	
Trac 0.5 (February 23, 2004)
http://svn.edgewall.com/repos/trac/tags/trac-0.5

 * First release.